# ks-knowledge-system

./: .dockerignore  .gitignore  CLAUDE.md  Caddyfile  KNOWLEDGE-SYSTEM-OVERVIEW.md  README.md  docker-compose.dev.yml  docker-compose.yml  playwright.config.ts
bookmark-manager/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README-DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
bookmark-manager/bot/: main.py
bookmark-manager/cli/: README.md  __init__.py  bookmark_cli.py  requirements.txt
bookmark-manager/docs/: backup-info.md  style.md
bookmark-manager/migrations/: 001_add_expires_at_rename_is_paper.py
bookmark-manager/scripts/: backup_cron.sh  feed_cleanup.py  feed_refresh.py  migrate_add_categorization.py  migrate_add_columns.py
bookmark-manager/src/: database.py  main.py  models.py  scheduler.py  schemas.py
bookmark-manager/tests/: conftest.py  test_archive_service.py  test_background_jobs.py  test_backup.py  test_bookmarks_api.py  test_canvas.py  test_content_storage.py  test_database.py  test_embedding_service.py  test_events.py  test_expiry_service.py  test_feeds.py  test_feeds_templates.py  test_integration.py  test_jina_client.py  test_km_service.py  test_llm_integration.py  test_llm_service.py  test_paper_detection.py  test_paths.py  test_sanitize.py  test_search.py  test_telegram_bot.py  test_ui.py  test_zotero_service.py
canvas/: Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
canvas/data/: canvas.db
canvas/src/: database.py  main.py  models.py  schemas.py
canvas/static/: workspace.js
(+333 files in other folders)
