[project]
name = "canvas"
version = "0.1.0"
description = "Thinking tool: draft with quotes, workspace for arguments"
requires-python = ">=3.10"

[project.optional-dependencies]
server = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.31.0",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.35",
    "aiosqlite==0.20.0",
    "jinja2==3.1.4",
]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "playwright==1.40.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
